force-app/main/default/objects/Settings__mdt/Settings__mdt.object-meta.xml
<CustomObject>
    <description>For name/value combos. Categories for namespacing</description>
    <label>Settings</label>
    <pluralLabel>Settings</pluralLabel>
</CustomObject>