force-app/main/default/objects/Settings__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>