force-app/main/default/objects/Settings__mdt/listViews/Main.listView-meta.xml
<ListView>
    <fullName>Main</fullName>
    <columns>MasterLabel</columns>
    <columns>NamespacePrefix</columns>
    <columns>Category__c</columns>
    <columns>Name__c</columns>
    <columns>OrgType__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>Main</label>
</ListView>